firefox-trunk (108.0~a1~hg20221018r638034-0ubuntu1) UNRELEASED; urgency=medium

  * Bump dump_sys to 0ac53a9c561988b617a68bf4a59c92b33d4bdd19
    - debian/build/create-tarball.py
  * Drop upstreamed patches
    - debian/patches/D158954.patch,debian/patches/D158956.patch,
      debian/patches/D158957.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 18 Oct 2022 07:56:36 +0200

firefox-trunk (107.0~a1~hg20221014r637946-0ubuntu1) kinetic; urgency=medium

  * Bump dump_sys to 6b842ac0008e2e9efe1df31e1c918ba02cb31b4d
    - debian/build/create-tarball.py
  * Pass "export RUST_BACKTRACE=full" to cbindgen/dump_sys build
    - debian/build/rules.mk
  * Fix building cubeb-rs on arm*
    - debian/patches/D158954.patch,debian/patches/D158956.patch,
      debian/patches/D158957.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sat, 15 Oct 2022 15:48:59 +0200

firefox-trunk (106.0~a1~hg20220918r635717-0ubuntu1) kinetic; urgency=medium

  * Use MACH_BUILD_PYTHON_NATIVE_PACKAGE_SOURCE=none instead of
    MACH_USE_SYSTEM_PYTHON=1
  * Bump build-dep on nodejs(-mozilla) >= 12.22.12
    - debian/control{,.in}
  * Fix fdlibm build on i386 and s390x
    - debian/patches/fix-fdlibm-ftbfs.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 18 Sep 2022 17:06:50 +0200

firefox-trunk (105.0~a1~hg20220816r627253-0ubuntu1) kinetic; urgency=medium

  * Bump build-dep on nodejs(-mozilla) >= 12.22.1
    - debian/control{,.in}
  * Bump build-dep on rustc >= 1.61.0 and cargo >= 0.62
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 16 Aug 2022 11:06:28 +0200

firefox-trunk (104.0~a1~hg20220723r624975-0ubuntu1) kinetic; urgency=medium

  * Bump build-dep on nodejs(-mozilla) >= 12.22.1
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 28 Jun 2022 12:12:18 +0200

firefox-trunk (103.0~a1~hg20220626r622105-0ubuntu1) kinetic; urgency=medium

  * Update cbindgen to 0.24.3
    - debian/build/create-tarball.py
